# VulkanProject

./: CMakeLists.txt
all_assets_and_shaders/assets/: fish.glb  room.glb
all_assets_and_shaders/shaders/: cmake_install.cmake
src/: CMakeLists.txt  camera.cpp  camera.h  database_controller.cpp  database_controller.h  descriptors.cpp  descriptors.h  engine.cpp  engine.h  images.cpp  images.h  initializers.cpp  loader.cpp  loader.h  main.cpp  pipelines.cpp  pipelines.h  types.h
